--- a/javalin_emp_crud_app/build.gradle
+++ b/javalin_emp_crud_app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.app'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,22 +10,19 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-
-}
-
-test {
-    useJUnitPlatform()
+    compile 'io.javalin:javalin:3.13.6'
+    compile "org.slf4j:slf4j-simple:1.8.0-beta4"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.10.3"
 }
 
 jar {
-    archiveBaseName = 'multiply'
+    archiveBaseName = 'javelinCRUD'
     archiveVersion = ''
     manifest {
         attributes(
-                'Main-Class': 'com.gradlebuild.example.Jar'
+                'Main-Class': 'com.app.main.Main'
         )
     }
     from {
@@ -33,20 +30,12 @@ jar {
     }
 }
 
-
-tasks.register("testing") {
-
-                println("Testing a build script!");
-
+test {
+    useJUnitPlatform()
 }
 
 task runJar(type: JavaExec) {
-        main = "-jar";
-        args jar.archiveFile.get()
-        standardInput = System.in
+    main = "-jar";
+    args jar.archiveFile.get()
+    standardInput = System.in
 }
-
-
-
-
-
